# oracle

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: hud-engineer.md  stats-validator.md
apps/hud/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
data/predictions/: predictions.jsonl
data/sim/: backtest_report.json  ensemble_weights_20260703T003647Z.json  ensemble_weights_20260703T003702Z.json  ensemble_weights_20260703T010739Z.json  ensemble_weights_20260703T010900Z.json  ensemble_weights_20260703T015137Z.json  ensemble_weights_20260703T015242Z.json  ensemble_weights_20260703T034556Z.json  ensemble_weights_20260703T034806Z.json  ensemble_weights_20260703T034814Z.json  ensemble_weights_20260703T060718Z.json  ensemble_weights_20260703T060727Z.json  ensemble_weights_20260703T065628Z.json  ensemble_weights_20260703T065637Z.json  ensemble_weights_20260704T060550Z.json  ensemble_weights_20260704T060559Z.json  ensemble_weights_20260706T060027Z.json  ensemble_weights_20260706T060038Z.json  ensemble_weights_20260707T060559Z.json  (+34 more)
scripts/: nightly_cycle.sh
services/: backtest.py  metrics.py  predict.py  prediction_log.py
services/api/: app.py
tests/: conftest.py  test_api.py  test_backtest.py  test_dixon_coles.py  test_elo.py  test_ensemble.py  test_features.py  test_football_data.py  test_gbm.py  test_martj42.py  test_metrics.py  test_predict_cli.py  test_prediction_log.py  test_sim.py  test_snapshots.py  test_team_names.py
(+53 files in other folders)
